# dio-bank-app

./: .env-test  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 1842f3766e32_atualiza_created_at_para_timezone_aware.py  46839874b405_create_account_table.py  9da29a63fd4d_create_transaction_table.py  bacee4932018_fix_date_in_transaction_colum_created_.py  c3a777591223_initial_tables.py  c4f9408f9241_fix_timestamp_in_trasaction.py  ce248ba42ddd_fix_foreign_key_user_id_in_account.py  ce5272c64f0a_create_user_table.py  d571965f0379_create_uuid_extension.py  ef6766a0f533_add_timezone_to_created_at.py
src/: main.py
src/app/shared/config/: settings.py
src/app/shared/database/: database_config.py  model_base.py
src/app/shared/domain/: base_entity.py
src/app/shared/dto/: base_dto.py
src/app/shared/security/: validation_token.py
src/app/shared/validators/: uuid_validator.py
tests/: conftest.py
tests/e2e/auth/: test_authenticate_user_e2e.py  test_register_user_e2e.py
tests/e2e/core_banking/: test_get_balance_account_e2e.py  test_open_account_e2e.py  test_transfer_accounts_funds_e2e.py
tests/factories/use_cases/: authenticat_user.py  get_account_balance_use_case_factory.py  open_account_use_case_factory.py  register_use_case_factory.py  transfer_founds_use_case_factory.py
tests/unit/auth/services/: in_memory_hash_passoword_service.py  in_memory_token_service.py
tests/unit/auth/use_cases/: test_authenticate_register_user.py  test_register_user.py
tests/unit/core_banking/use_cases/: test_get_account_balance.py  (+2 more)
(+73 files in other folders)
