[project]
name = "dio-bank-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Santos",email = "paulorfsantos17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dio_bank_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
